reference/v5.0/PowershellGet/Get-InstalledScript.md
---
external help file: PSITPro5_PSGet.xml
online version: ad041750-9866-43b1-af85-077f2b2efae0
schema: 2.0.0
---

# Get-InstalledScript
## SYNOPSIS
Gets an installed script.

## SYNTAX

```
Get-InstalledScript [[-Name] <String[]>] [-MaximumVersion <Version>] [-MinimumVersion <Version>]
 [-RequiredVersion <Version>]
```

## DESCRIPTION
The Get-InstalledScript cmdlet gets installed scripts for CurrentUser and AllUsers scopes.

## EXAMPLES

### Example 1: Get all installed scripts
```
PS C:\>Get-InstalledScript
Version    Name                                Type       Repository           Description
-------    ----                                ----       ----------           -----------
2.5        Required-Script1                    Script     local1               Description for the Required-Script1 script
2.5        Required-Script2                    Script     local1               Description for the Required-Script2 script
2.5        Required-Script3                    Script     local1               Description for the Required-Script3 script
2.0        Script-WithDependencies1            Script     local1               Description for the Script-WithDependencies1 script
```

This command gets all installed scripts.

### Example 2: Get installed scripts by name
```
PS C:\>Get-InstalledScript -Name "Required-Scri*" 
Version    Name                                Type       Repository           Description
-------    ----                                ----       ----------           -----------
2.5        Required-Script1                    Script     local1               Description for the Required-Script1 script
2.5        Required-Script2                    Script     local1               Description for the Required-Script2 script
2.5        Required-Script3                    Script     local1               Description for the Required-Script3 script
```

This command gets scripts where the name begins with Required-Scri.

## PARAMETERS

### -MaximumVersion
Specifies the maximum, or latest, version of a script to get.
The MaximumVersion and RequiredVersion parameters are mutually exclusive; you cannot use both parameters in the same command.

```yaml
Type: Version
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -MinimumVersion
Specifies the minimum version of a script to get.
The MinimumVersion and RequiredVersion parameters are mutually exclusive; you cannot use both parameters in the same command.

```yaml
Type: Version
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Name
Specifies an array of names of scripts to get.
Wildcards are accepted.

```yaml
Type: String[]
Parameter Sets: (All)
Aliases: 

Required: False
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -RequiredVersion
Specifies the exact version of a script to get.

```yaml
Type: Version
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Install-Script](ad041750-9866-43b1-af85-077f2b2efae0)

[Uninstall-Script](22014a04-4bf6-4d13-98cd-7717567da987)

